# comet_stack

./: CMakeLists.txt  StarCatalogValidator.h  comet_stacker.cpp  example_build.sh  geocentric_calc.cpp  horizons_C2022_E3.txt  radec_parser.cpp  sidereal_config.json
